<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_gravity="center">


    <Button
        android:id="@+id/btn_balita"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:text="@string/balita"
        android:background="#003366"
        android:textColor="#ffffff"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_brosca" />

    <Button
        android:id="@+id/btn_anak"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/bayi"
        android:background="#003366"
        android:textColor="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_bmi" />

    <Button
        android:id="@+id/btn_brosca"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="32dp"
        android:text="@string/brosca"
        android:textAlignment="center"
        android:background="#003366"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_bmi"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="34dp"
        android:text="@string/bmi"
        android:background="#003366"
        android:textColor="#ffffff"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_ibu_hamil"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="#003366"
        android:layout_marginTop="48dp"
        android:text="@string/hamil"
        android:textAlignment="center"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_anak" />


</androidx.constraintlayout.widget.ConstraintLayout>