<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PregnantWomanActivity">

    <TextView
        android:id="@+id/tv_tinggi_badan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tb"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_tinggi_badan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="numberSigned"
        android:hint="@string/enter_tb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tinggi_badan" />

    <TextView
        android:id="@+id/tv_kehamilan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kehamilan_minggu"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_tinggi_badan" />

    <EditText
        android:id="@+id/ed_kehamilan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="16sp"
        android:inputType="numberSigned"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_kehamilan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_kehamilan" />

    <Button
        android:id="@+id/btn_calculate_pregnant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_child"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_kehamilan" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="16sp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_calculate_pregnant" />
</androidx.constraintlayout.widget.ConstraintLayout>